--- a/MicroBlog.Web/index.html
+++ b/MicroBlog.Web/index.html
@@ -1,5 +1,4 @@
-﻿<!-- index.html -->
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8" />
@@ -20,7 +19,7 @@
                 }
             });
 
-            React.render(<commentbox />, document.getElementById('content'));
+            React.render(<CommentBox />, document.getElementById('content'));
 
         </script>
     </body>
