basic create form

--- a/MicroBlog.Web/index.html
+++ b/MicroBlog.Web/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hello React</title>
+        <title>My Blogs</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
