--- a/MicroBlog.Web/index.html
+++ b/MicroBlog.Web/index.html
@@ -22,7 +22,7 @@
     <script type="riot/tag">
         <riot-default>
             <div class="container">
-                <h1>My new blog</h1>
+                <h1>My blog</h1>
                 <div><a href="create.html">Create</a></div>
             </div>
         </riot-default>
