--- a/MicroBlog.Web/create.html
+++ b/MicroBlog.Web/create.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/bloglist.css">
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/medium-editor/5.5.4/js/medium-editor.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
 
@@ -26,8 +27,8 @@
                 <form id="newpost">
                     <h1>Enter the content for your new blogpost</h1>
                     <div>
-                        <div id="editor">
-                            Test
+                        <div class="editor">
+                            Enter your new blogpost here.
                         </div>
                     </div>
                     <div>
