More messing with submitting new post.

--- a/MicroBlog.Web/create.html
+++ b/MicroBlog.Web/create.html
@@ -44,14 +44,22 @@
 
             riot.mount('riot-create');
 
+            var request;
+
             $("#newpost").submit(function (event) {
+
+                if (request) {
+                    request.abort();
+                }
 
                 var sendInfo = {
                     Title: 'Test blog title',
                     Content: $('.editor').val()
                 }
 
-                $.ajax({
+                console.log(sendInfo);
+
+                request = $.ajax({
                     type: "POST",
                     url: "/api/",
                     dataType: "json",
@@ -65,6 +73,29 @@
                     },
 
                     data: sendInfo
+                });
+
+                // Callback handler that will be called on success
+                request.done(function (response, textStatus, jqXHR) {
+                    // Log a message to the console
+                    console.log("Hooray, it worked!");
+                });
+
+                // Callback handler that will be called on failure
+                request.fail(function (jqXHR, textStatus, errorThrown) {
+                    // Log the error to the console
+                    console.error(
+                        "The following error occurred: " +
+                        textStatus, errorThrown
+                    );
+                });
+
+                // Callback handler that will be called regardless
+                // if the request failed or succeeded
+                request.always(function () {
+                    // Reenable the inputs
+                    console.log("always.");
+                    //$inputs.prop("disabled", false);
                 });
 
                 alert("Handler for .submit() called.");
