--- a/MicroBlog.Web/create.html
+++ b/MicroBlog.Web/create.html
@@ -27,6 +27,10 @@
                 <form id="newpost">
                     <h1>Enter the content for your new blogpost</h1>
                     <div>
+                        <label for="title">Title</label>
+                        <input type="text" id="title" />
+                    </div>
+                    <div>
                         <div class="editor">
                             Enter your new blogpost here.
                         </div>
@@ -53,7 +57,7 @@
                 }
 
                 var sendInfo = {
-                    Title: 'Test blog title',
+                    Title: $('#title').val(),
                     Content: $('.editor').html()
                 }
 
