--- a/MicroBlog.Web/index.html
+++ b/MicroBlog.Web/index.html
@@ -51,15 +51,17 @@
                 $.each(data, function(item) {
                     blogdata.push(item);
                 });
+                console.log(blogdata);
 
                 if (blogdata.length === 0) {
                     //blogdata.push({ id: 0, title: "There are no blogs created yet.", content: "Click here to add one" });
                     riot.mount('riot-default');
+                    console.log('default');
                 } else {
                     riot.mount('riot-container', { data: blogdata });
+                    console.log('list');
                 }
             });
-            
             
             //var mockdata = [
             //    { id: 1, title: "Test Title 1", content: "Test Content 1" },
