displaying html on blog list. redirect on create.

--- a/MicroBlog.Web/create.html
+++ b/MicroBlog.Web/create.html
@@ -70,37 +70,21 @@
                     dataType: "json",
                     success: function (msg) {
                         if (msg) {
-                            console.log("Created!" + msg);
-                            //location.reload(true);
+                            window.location.replace('/index.html');
                         } else {
-                            console.log("Cannot add to list !");
+                            console.log("No api response!");
                         }
                     },
 
                     data: sendInfo
                 });
 
-                // Callback handler that will be called on success
-                request.done(function (response, textStatus, jqXHR) {
-                    // Log a message to the console
-                    console.log("Blog Created!");
-                });
-
                 // Callback handler that will be called on failure
                 request.fail(function (jqXHR, textStatus, errorThrown) {
-                    // Log the error to the console
                     console.error(
                         "The following error occurred: " +
                         textStatus, errorThrown
                     );
-                });
-
-                // Callback handler that will be called regardless
-                // if the request failed or succeeded
-                request.always(function () {
-                    // Reenable the inputs
-                    //console.log("always.");
-                    //$inputs.prop("disabled", false);
                 });
 
                 //alert("Handler for .submit() called.");
