layouts, css, links.

--- a/MicroBlog.Web/create.html
+++ b/MicroBlog.Web/create.html
@@ -21,8 +21,8 @@
 
     <riot-blogpostform></riot-blogpostform>
 
-    <script type="riot/tag" src="riot-blogpostform.tag"></script>
-        <!--<riot-blogpostform>
+    <script type="riot/tag">
+        <riot-blogpostform>
             <div class="container">
                 <form id="blogpostform">
                     <h1>Enter the content for your new blogpost</h1>
@@ -41,7 +41,7 @@
                 </form>
             </div>
         </riot-blogpostform>
-    </script>-->
+    </script>
 
     <script>
         $(document).ready(function() {
