--- a/MicroBlog.Web/edit.html
+++ b/MicroBlog.Web/edit.html
@@ -1,9 +1,39 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Blogs</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.2/riot+compiler.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="/css/bloglist.css">
 </head>
 <body>
+    <riot-container class="container"></riot-container>
 
+    <script type="riot/tag">
+        <riot-container>
+            <div class="container">
+                <div class="row">
+                    <div class="blogheader"><h1>{ opts.data.title }</h1></div>
+                    <raw content="{ opts.data.content }" />
+                </div>
+            </div>
+        </riot-container>
+    </script>
+
+    <script type="riot/tag">
+        <raw>
+            <span></span>
+            this.root.innerHTML = opts.content
+        </raw>
+    </script>
+    
 </body>
 </html>
