--- a/MicroBlog.Web/edit.html
+++ b/MicroBlog.Web/edit.html
@@ -13,27 +13,113 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="/css/bloglist.css">
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/medium-editor/5.5.4/js/medium-editor.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
-    <riot-container class="container"></riot-container>
+    <riot-blogpostform></riot-blogpostform>
 
     <script type="riot/tag">
-        <riot-container>
+        <riot-blogpostform>
             <div class="container">
-                <div class="row">
-                    <div class="blogheader"><h1>{ opts.data.title }</h1></div>
-                    <raw content="{ opts.data.content }" />
-                </div>
+                <form id="blogpostform">
+                    <h1>Enter the content for your new blogpost</h1>
+                    <div>
+                        <label for="title"></label>
+                        <input type="text" id="title" value="{ opts.blogdata.title }" />
+                    </div>
+                    <div>
+                        <div class="editor">
+                            { opts.blogdata.content }
+                        </div>
+                    </div>
+                    <div>
+                        <input type="submit" value="Update" />
+                    </div>
+                </form>
             </div>
-        </riot-container>
+        </riot-blogpostform>
     </script>
 
-    <script type="riot/tag">
-        <raw>
-            <span></span>
-            this.root.innerHTML = opts.content
-        </raw>
+    <script>
+        $(document).ready(function () {
+
+            var urlParams;
+            (window.onpopstate = function () {
+                var match,
+                    pl = /\+/g,  // Regex for replacing addition symbol with a space
+                    search = /([^&=]+)=?([^&]*)/g,
+                    decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
+                    query = window.location.search.substring(1);
+
+                urlParams = {};
+                while (match = search.exec(query))
+                    urlParams[decode(match[1])] = decode(match[2]);
+            })();
+
+            console.log(urlParams["id"]);
+            if (urlParams["id"] !== "") {
+
+                $.getJSON("api/" + urlParams["id"], function(data) {
+                    var blogdata = data;
+
+                    console.log(blogdata);
+
+                    if (blogdata.length === 0) {
+                        riot.mount('riot-default');
+                    } else {
+                        riot.mount('riot-container', { data: blogdata });
+                    }
+                });
+            }
+
+            var request;
+
+            $("#blogpostform").submit(function (event) {
+
+                if (request) {
+                    request.abort();
+                }
+
+                var sendInfo = {
+                    Title: $('#title').val(),
+                    Content: $('.editor').html()
+                }
+
+                console.log(sendInfo);
+
+                request = $.ajax({
+                    beforeSend: function (xhr) { xhr.setRequestHeader("Authorization", "Basic " + btoa("microblog" + ":" + "microblog")); },
+                    type: "PUT",
+                    url: "/api/",
+                    dataType: "json",
+                    success: function (msg) {
+                        if (msg) {
+                            window.location.replace('/index.html');
+                        } else {
+                            console.log("No api response!");
+                        }
+                    },
+
+                    data: sendInfo
+                });
+
+                // Callback handler that will be called on failure
+                request.fail(function (jqXHR, textStatus, errorThrown) {
+                    console.error(
+                        "The following error occurred: " +
+                        textStatus, errorThrown
+                    );
+                });
+
+                //alert("Handler for .submit() called.");
+                event.preventDefault();
+            });
+
+            new MediumEditor('.editor');
+        });
     </script>
-    
+
 </body>
 </html>
