Displaying html in the edit box, edit params

--- a/MicroBlog.Web/edit.html
+++ b/MicroBlog.Web/edit.html
@@ -58,10 +58,12 @@
                     urlParams[decode(match[1])] = decode(match[2]);
             })();
 
-            console.log(urlParams["id"]);
-            if (urlParams["id"] !== "") {
+            var id = urlParams["id"];
+            console.log(id);
 
-                $.getJSON("api/" + urlParams["id"], function(data) {
+            if (id !== "") {
+
+                $.getJSON("api/" + id, function (data) {
                     var blogdata = data;
 
                     console.log(blogdata);
@@ -70,55 +72,57 @@
                         // TODO 
                     } else {
                         riot.mount('riot-blogpostform', { data: blogdata });
-                        new MediumEditor('.editor');
+                        var me = new MediumEditor('.editor');
+                        me.setContent(blogdata.content, 0);
+
 
                     }
                 });
+
+                var request;
+
+                $("#blogpostform").submit(function (event) {
+
+                    if (request) {
+                        request.abort();
+                    }
+
+                    var sendInfo = {
+                        Id: id,
+                        Title: $('#title').val(),
+                        Content: $('.editor').html()
+                    }
+
+                    console.log(sendInfo);
+
+                    request = $.ajax({
+                        beforeSend: function (xhr) { xhr.setRequestHeader("Authorization", "Basic " + btoa("microblog" + ":" + "microblog")); },
+                        type: "PUT",
+                        url: "/api/" + id,
+                        dataType: "json",
+                        success: function (msg) {
+                            if (msg) {
+                                window.location.replace('/index.html');
+                            } else {
+                                console.log("No api response!");
+                            }
+                        },
+
+                        data: sendInfo
+                    });
+
+                    // Callback handler that will be called on failure
+                    request.fail(function (jqXHR, textStatus, errorThrown) {
+                        console.error(
+                            "The following error occurred: " +
+                            textStatus, errorThrown
+                        );
+                    });
+
+                    //alert("Handler for .submit() called.");
+                    event.preventDefault();
+                });
             }
-
-            var request;
-
-            $("#blogpostform").submit(function (event) {
-
-                if (request) {
-                    request.abort();
-                }
-
-                var sendInfo = {
-                    Title: $('#title').val(),
-                    Content: $('.editor').html()
-                }
-
-                console.log(sendInfo);
-
-                request = $.ajax({
-                    beforeSend: function (xhr) { xhr.setRequestHeader("Authorization", "Basic " + btoa("microblog" + ":" + "microblog")); },
-                    type: "PUT",
-                    url: "/api/",
-                    dataType: "json",
-                    success: function (msg) {
-                        if (msg) {
-                            window.location.replace('/index.html');
-                        } else {
-                            console.log("No api response!");
-                        }
-                    },
-
-                    data: sendInfo
-                });
-
-                // Callback handler that will be called on failure
-                request.fail(function (jqXHR, textStatus, errorThrown) {
-                    console.error(
-                        "The following error occurred: " +
-                        textStatus, errorThrown
-                    );
-                });
-
-                //alert("Handler for .submit() called.");
-                event.preventDefault();
-            });
-
         });
     </script>
 
